# AoC-2024

./: .gitignore  Cargo.toml  LICENSE
daily-template/src/: part1.rs
day-1/: Cargo.toml  daily_description.txt
day-1/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: part1.rs  part2.rs
day-2/: Cargo.toml
day-2/src/: part1.rs  part2.rs
day-3/: Cargo.toml  daily_description.txt  input2.txt
day-3/src/: part1.rs  part2.rs
day-4/: Cargo.toml
day-4/src/: part1.rs  part2.rs
day-5/: Cargo.toml  input2.txt
day-5/src/: part1.rs  part2.rs
day-6/: Cargo.toml
day-6/src/: part1.rs  part2.rs
day-7/: Cargo.toml  input1.txt  input2.txt
day-7/src/: part1.rs  part2.rs
day-8/: Cargo.toml  input1.txt
day-8/src/: part1.rs  part2.rs
day-9/: Cargo.toml  input1.txt
day-9/src/: part1.rs  part2.rs
