[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# Add dependencies for all days here
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
glam = "0.29.2"
rayon = "1.10.0"
rstest = "0.23.0"
